@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2020-08-07] RFC4880: added feature request #58895 (unknown critical notation)
 * [2020-07-19] RFC4880: fixed bug #58777 (should not decrypt SED packets)
 * [2020-05-02] RFC4880: fixed bug w.r.t. unrecognized critical subpackets
 * [2019-12-21] RFC4880: added boolean flag to control some RFC 4880bis features
